<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_a_minute">+1分钟</string>
    <string name="add_an_hour">+1小时</string>
    <string name="add_half_an_hour">+30分钟</string>
    <string name="add_ten_minutes">+10分钟</string>
    <string name="add_timer">添加计时器</string>
    <string name="app_name">Timer</string>
    <string name="app_name_placeholder">app name</string>
    <string name="application_list">应用</string>
    <string name="cancel">取消</string>
    <string name="canceled">已取消</string>
    <string name="countdown_placeholder">countdown</string>
    <string name="exit">退出</string>
    <string name="ok">确定</string>
    <string name="package_name_placeholder">package name</string>
    <string name="set_time_failed">定时失败</string>
    <string name="setting">设置</string>
    <string name="stopped">已停止</string>
    <string name="stopping_application">正在停止%s</string>
    <string name="the_device_is_not_rooted">设备未Root</string>
    <string name="the_task_is_canceled">任务已取消</string>
    <string name="version_placeholder">version</string>
    <string name="weather_cancel_timer">是否要取消定时</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="completed">已完成</string>
    <string name="icon">图标</string>
    <string name="title_activity_settings">设置</string>
    <string name="show_system_apps">显示系统应用</string>
    <string name="auto_shutdown">自动关闭</string>
    <string name="auto_shutdown_summary">当全部任务完成后一段时间内如果没有新的任务则自动关闭程序</string>
    <string name="show_system_apps_summary">在应用列表显示系统应用</string>
    <string name="custom_su_command">自定义su命令</string>
    <string name="custom_su_command_summary">设置自定义的su命令，重启有效</string>
    <string name="shell_provider_summary">选择用于关闭应用的权限提供器，重启有效</string>
    <string name="shell_provider">权限提供器</string>
    <string name="test_permission">测试权限</string>
    <string name="test_permission_summary">点击测试是否成功授权权限</string>
    <string name="unknown_shell_provider">未知的权限提供器</string>
    <string name="permission_granted">授权成功</string>
    <string name="permission_denied">授权失败</string>
    <string-array name="shell_providers">
        <item>Magisk</item>
        <item>Shizuku</item>
    </string-array>
</resources>
