<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:key="shell_provider"
        app:title="@string/shell_provider"
        app:defaultValue="shizuku"
        app:summary="@string/shell_provider_summary"
        app:entries="@array/shell_providers"
        app:entryValues="@array/shell_provider_values"
        app:iconSpaceReserved="false"/>
    <Preference
        app:key="test_permission"
        app:iconSpaceReserved="false"
        app:title="@string/test_permission"
        app:summary="@string/test_permission_summary" />
    <EditTextPreference
        app:key="su_command"
        app:title="@string/custom_su_command"
        app:defaultValue="su"
        app:summary="@string/custom_su_command_summary"
        app:iconSpaceReserved="false"/>
    <CheckBoxPreference
        app:key="show_system_apps"
        app:title="@string/show_system_apps"
        app:defaultValue="false"
        app:summary="@string/show_system_apps_summary"
        app:iconSpaceReserved="false"/>
    <CheckBoxPreference
        app:key="auto_shutdown"
        app:title="@string/auto_shutdown"
        app:summary="@string/auto_shutdown_summary"
        app:defaultValue="false"
        app:iconSpaceReserved="false"/>
</PreferenceScreen>