<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="64dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="5dp"
        android:background="@drawable/app_item_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/icon"
            android:contentDescription="@string/icon"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_alignParentStart="true"/>
        <LinearLayout
            android:id="@+id/app_info"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/icon">
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:ellipsize="marquee"
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_placeholder"
                android:maxLines="1"/>
            <TextView
                android:textSize="12sp"
                android:ellipsize="marquee"
                android:layout_marginTop="1dp"
                android:id="@+id/package_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/package_name_placeholder"
                android:maxLines="1"/>
            <TextView
                android:textSize="12sp"
                android:ellipsize="marquee"
                android:layout_marginTop="1dp"
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_placeholder"
                android:maxLines="1"/>
        </LinearLayout>
        <TextView
            android:textSize="14sp"
            android:id="@+id/deadline"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/countdown_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
