<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/mask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">
    <RelativeLayout
        android:orientation="vertical"
        android:background="@drawable/set_timer_dialog_background"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/add_timer"
            android:layout_alignParentTop="true"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/input_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_centerHorizontal="true">
            <TextView
                android:textSize="25sp"
                android:gravity="center"
                android:id="@+id/timeout"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
            <TextView
                android:textSize="25sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/minutes"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/button_area"
            android:layout_below="@id/input_area"
            android:layout_centerHorizontal="true">
            <TextView
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/add_a_minute"
                android:background="@drawable/button_background_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_a_minute"/>
            <TextView
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/add_ten_minutes"
                android:background="@drawable/button_background_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_ten_minutes"/>
            <TextView
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/add_half_an_hour"
                android:background="@drawable/button_background_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_half_an_hour"/>
            <TextView
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/add_an_hour"
                android:background="@drawable/button_background_1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_an_hour"/>
        </LinearLayout>
        <LinearLayout
            android:layout_below="@id/button_area"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/ok"
                android:textColor="@color/black"
                android:background="@drawable/button_background_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"/>
            <Button
                android:id="@+id/cancel"
                android:textColor="@color/black"
                android:background="@drawable/button_background_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
